# MEDYS-PW

./: Makefile.am  README.md  configure.ac
input/800nm_I5E13_NX_200_1MO_2e/BASIS/CO2/1/: argosls.sp
input/800nm_I5E13_NX_200_1MO_2e/BASIS/CO2_eq/1/: argosls.sp  mocoef_scf.sp
input/BH3/: input  submit.bash  vector_array.nml
input/BH3/BASIS/BH3/1/: mocoef_scf.sp
input/BH3/BASIS/BH3/columbus/: LOG  argosin  colinp.debug  iargosky  infofl  makscfky  scfin
input/BH3/BASIS/BH3/columbus/LISTINGS/: argosls.sp
input/BH3/BASIS/BH3/columbus/WORK/: aoints  aoints2  argosin  atable  colinp.debug  geom  geom.unik  scfls  unikls
input/CO2/: Co_eq_mocoeff.xlsx
input/CO2/800nm_I5E13_NX_200_1MO_2e/: analysis.ipynb  input  vector_array.nml
input/CO2/800nm_I5E13_NX_200_1MO_2e/BASIS/CO2/1/: mocoef_scf.sp
input/H2/: analysis.ipynb  input
input/H2/BASIS/H2/COLUMBUS/: argosin  colinp.debug  geom  iargosky  makscfky
input/H2/BASIS/H2/COLUMBUS/LISTINGS/: argosls.sp  scfls.sp
input/H2/BASIS/H2/COLUMBUS/WORK/: aoints  aoints2  argosin.new  geom.unik  mocoef  scfin  unikls
input/N2/: input
input/N2/BASIS/N2/1/: aoints2  argosls.sp
input/N2/BASIS/N2/columbus/: argosin  geom  iargosky  infofl  makscfky
input/N2/BASIS/N2/columbus/WORK/: aoints  argosin  geom.unik  mocoef  scfin  scfls  unikls
input/N2/BASIS/N2/gaussian/: N2.gjf
input/O2/: input
input/O2/BASIS/1/: argosls.sp
input/O2/BASIS/O2/1/: mocoef_scf.sp
input/O2/BASIS/columbus/: argosin  control.run  geom  iargosky  makscfky  runc.error
input/O2/BASIS/columbus/WORK/: aoints  aoints2  argosin.new  atable  geom.unik  scfin  scfls  unikls
input/O2/BASIS/gaussian/: o2.gjf
input_exemple/CO2/pdt_100_nper_2/11_MO/: Analyse.ipynb  LOG  input  slurm-41072385.out  slurm-41072385.seff  submit.11_MO_PW  vector_array.nml
input_exemple/CO2/pdt_100_nper_2/11_MO_delta_0/: Analyse.ipynb  input  slurm-41149861.out  slurm-41149861.seff
src/all_v001/: NewSubroutines.f90  Tests.f90  basics.f90  blas.f90  champ1.f90  dynamique.f90  grille.f90  lapack.f90  math.f90  matrix_modifications.f90  matrix_temp_highlvl.f90  matrix_temp_lowlvl.f90  nouveaudrt.f90  observable.f90  omp_lib.f90  ortho.f90  qp_integrals.f90  read_columbus.f90  read_gamess.f90  read_input.f90  routines.f90  string.f90  variables.f90
src/core/: basics.f90  clock.f90  clock_test.f90  core.f90  error.f90  physmath_constants.f90  precision.f90  string_test.f90  unit_conversion.f90  unit_conversion_test.f90
src/io_interface/: export_matrix_module.f90  get_command_line_module.f90  io_error.f90  io_module.f90  io_module_test.f90
src/main/: field_test.f90  input  main.f90
src/tools/: integrate.nb  makefile  makefile2  testGS.f90
tools/: analyse.py  convert  convert.f90  convert.py  makefile  orb.py  orb_new.py  orboo.py
